2008-04-10  Dmitry Dulepov  <dmitry@typo3.org>

	* Added @var to typo3/sysext/beuser/mod/index.php

2008-04-09  Benjamin Mack  <benni@typo3.org>

	* t3skin: Exchanged icon which was still in use from oldskin

2008-04-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug 8066: Incorrect height of htmlArea RTE dropdown selectors in some browsers
	* Updated htmlArea RTE version number to 1.7.4

2008-04-08  Oliver Hader  <oliver@typo3.org>

	* Followup to #8014: Fixed bug with usage of t3lib_TCEforms::getDynTabMenu()

2008-04-08  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8041: EM has wrong image tag for headers in extension listing (Thanks to Steffen Kamper)

2008-04-07  Martin Kutschker  <masi@typo3.org>

	* Remove superfluos is_array() check in t3lib_div

2008-04-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8005: Linking across domains does not work with nested domains

2008-04-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7992: rtehtmlarea does not work with Firefox 3 Beta 5
	* Fixed bug #8043: Highlighting text from right to left in htmlArea RTE is erratic in Firefox

2008-04-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8013: Felogin redirectMode does not work with spaces (Thanks to Steffen Kamper)
	* Fixed bug #7317: CSH popup not working in flexforms (Thanks to Kasper Ligaard)
	* Fixed bug #8028: Databases with an "-" in it can't be used (Thanks to Steffen Kamper)

2008-04-05  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8014: Deactivated tabs in page-properties should be hidden

2008-04-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7990: htmlArea RTE color picker has no scrollbar

2008-04-04  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8015: XHTML issue in felogin-template (Thanks to Steffen Kamper)

2008-04-03  Michael Stucki  <michael@typo3.org>

	* Fixed bug #8009: Wrong TS-Code because appendString cannot handle multiline strings (Thanks to Claudio Cathomen / ICSurselva)