@@ -1,3 +1,7 @@
+2008-04-10  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed bug #8035: 123-Installer shows error in step 1 when no DB connection was set up yet.
+
 2008-04-10  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added @var to typo3/sysext/beuser/mod/index.php
